pre-0.9.14
   Bug Fixes
   New Features
     - reduce PCRE cache size to help lower memory footprint
     - improve mapping of hunspell dictionary names to actual language names (thanks BeckyDTP)
     - add warning during import if unmanifested files exist in the epub zip archive

Sigil-0.9.13
   Bug Fixes
     - Revert change of INI encoding to utf-8 as QSettings very broken under utf-8 (commit 5484463)
     - Ensure all url attributes in shape-outside properties in CSS stylesheets get updated (commit de7b09f)
     - Workaround for lost cursor in qlineedit Qt bug (issue #398) (commit a8acab7)
     - Workaround missing File New, Open, Quit menus in Mac menubar if windows closed (commit 660a8aa)
     - Remove Icon from Tab for macOS only to workaround Qt bug (commit 5c91924)
     - Plug some memory leaks (commits: 85f78d7, cb9b833, 614d601, bf2f2f4, ebfb613, 4qa8f33) 
     - Backport Qt 5.12alpha fix to prevent heap corruption due to qwidget next focus pointers (commit f5c7284)
     - Plug macOS memory leaks when closing a main window (commit fbf9015)
     - Put back quote in tag name bug fix lost in recent changes (commit ebd8c7c)
     - Disable Netscape Plugins being used in BookView and Preview Window (commit 79314ea)
     - Use custom version of qtwebkit with Qt 5.5 memory leak fix added back and no load plugins if disabled 
       	   (see commits 94a28d7,  9f7ebba, and 4b968a9)

   New Features
     - Add filename to tab tooltip (commit 27f8db7)
     - Clear memory caches when Preview changes to keep memory footprint smaller (commit 87b9247)
     - Update to MathJax 2.75, adds support for mathml mlongdiv, mstack, mcarries (commit 568aba5)
     - Reduce memory footprint by letting worker threads expire (commit c1ee7ca)
     - Reduce memory footprint by properly setting web page caches (commit 9f07cbe)


Sigil-0.9.12
   Bug Fixes
    - fix typo in cssreformatter that caused errors with @fontface (issue #394)